--- a/package.json
+++ b/package.json
@@ -15,62 +15,63 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
+    "@angular/animations": "^12.2.16",
+    "@angular/common": "^12.2.16",
+    "@angular/compiler": "^12.2.16",
+    "@angular/core": "^12.2.16",
+    "@angular/forms": "^12.2.16",
+    "@angular/localize": "12.2.16",
+    "@angular/platform-browser": "^12.2.16",
+    "@angular/platform-browser-dynamic": "^12.2.16",
+    "@angular/router": "^12.2.16",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@ng-bootstrap/ng-bootstrap": "2.2.2",
-    "@ngx-translate/core": "^10.0.2",
+    "@ng-bootstrap/ng-bootstrap": "10.0.0",
+    "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "^3.0.1",
     "@tweenjs/tween.js": "^17.4.0",
-    "@types/": "tweenjs/tween.js",
     "@types/tweenjs": "^1.0.0",
-    "bootstrap": "4.1.3",
+    "@vrk-yti/yti-common-ui": "0.0.1-alpha-20210928.g2ff813c.feature-angular-library",
+    "bootstrap": "4.5.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.2",
     "ngx-autosize": "~1.2.4",
-    "ngx-clipboard": "11.1.9",
+    "ngx-clipboard": "14.0.1",
     "ngx-cookie-service": "^2.2.0",
     "ngx-virtual-scroller": "3.0.2",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.6.7",
     "simple-line-icons": "^2.4.1",
     "sonarqube-scanner": "^2.5.0",
+    "tslib": "^2.0.0",
     "uuid": "3.0.1",
-    "yti-common-ui": "https://github.com/VRK-YTI/yti-common-ui.git/#91705c04dff3132ba4372994d9f1237d3b25678d",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "~6.1.5",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
+    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular/cli": "~12.2.18",
+    "@angular/compiler-cli": "^12.2.16",
+    "@angular/language-service": "^12.2.16",
     "@biesbjerg/ngx-translate-extract": "^3.0.4",
-    "@types/jasmine": "~2.8.6",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.9.5",
+    "@types/node": "^12.11.1",
     "@types/tween.js": "^17.2.0",
     "@types/uuid": "2.0.29",
     "@types/webpack-env": "^1.13.6",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "json-loader": "^0.5.7",
     "node-sass": "^7.0.0",
     "po-loader": "^0.4.1",
     "po2json": "^0.4.5",
-    "protractor": "~5.4.0",
+    "protractor": "~7.0.0",
+    "raw-loader": "^4.0.2",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "tslint": "~6.1.0",
+    "typescript": "~4.3.5"
   },
   "engines": {
     "node": ">=14.18.1 <15.0.0"
