--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@ngx-translate/http-loader": "^3.0.1",
     "@tweenjs/tween.js": "^17.4.0",
     "@types/tweenjs": "^1.0.0",
-    "@vrk-yti/yti-common-ui": "0.0.1-alpha-20210928.g2ff813c.feature-angular-library",
+    "@vrk-yti/yti-common-ui": "../yti-common-ui/dist/yti-common-ui/",
     "bootstrap": "4.5.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
