using our own yti-common-ui package

--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -40,6 +40,7 @@ COPY nginx-docker-local.conf /etc/nginx/nginx.conf
 # when we change our application's dependencies:
 COPY package.json /tmp/package.json
 COPY yarn.lock /tmp/yarn.lock
+COPY .npmrc /tmp/.npmrc
 WORKDIR /tmp
 RUN ["yarn", "install"]
 
