--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@angular/platform-browser-dynamic": "^12.2.16",
     "@angular/router": "^12.2.16",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+    "@goraresult/yti-common-ui": "0.0.1-alpha-20221107.gcaac578.gora-dev",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "^3.0.1",
     "@tweenjs/tween.js": "^17.4.0",
     "@types/tweenjs": "^1.0.0",
-    "@vrk-yti/yti-common-ui": "../yti-common-ui/dist/yti-common-ui/",
     "bootstrap": "4.5.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
