--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
               "src/favicon.ico",
               "src/assets",
               "src/version.txt",
+              "src/configuration",
               {
                 "glob": "**/*",
                 "input": "node_modules/@goraresult/yti-common-ui/assets",
@@ -51,12 +52,6 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "6kb"
-                }
-              ],
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
