proxy_pass for messaging-api

--- a/nginx-docker-local.conf
+++ b/nginx-docker-local.conf
@@ -44,6 +44,10 @@ http {
             proxy_pass http://yti-comments-api:9701/comments-api/;
         }
 
+        location /messaging-api/ {
+            proxy_pass http://yti-messaging-api:9801/messaging-api/;
+        }
+
         location /favicon.ico {
             log_not_found off;
         }
