--- a/nginx-docker-local.conf
+++ b/nginx-docker-local.conf
@@ -45,7 +45,8 @@ http {
         }
 
         location /messaging-api/ {
-            proxy_pass http://yti-messaging-api:9801/messaging-api/;
+            set $messaging_url http://yti-messaging-api:9801/messaging-api/;
+            proxy_pass $messaging_url;
         }
 
         location /favicon.ico {
