--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "ng": "ng",
     "start": "ng serve --port 9700 --proxy-config proxy.conf.json",
     "start-dev": "ng serve --port 9700 --proxy-config proxy-dev.conf.json --ssl true",
-    "build": "ng build",
-    "build-prod": "ng build --prod",
+    "build": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
