run behind docker traefik with context path

--- a/nginx-docker-local.conf
+++ b/nginx-docker-local.conf
@@ -45,8 +45,7 @@ http {
         }
 
         location /messaging-api/ {
-            set $messaging_url http://yti-messaging-api:9801/messaging-api/;
-            proxy_pass $messaging_url;
+            proxy_pass http://yti-messaging-api:9801/messaging-api/;
         }
 
         location /favicon.ico {
