--- a/Dockerfile.traefik
+++ b/Dockerfile.traefik
@@ -22,12 +22,12 @@ RUN echo "$NPMRC" > .npmrc && yarn install && rm -f .npmrc
 RUN echo "$VERSION" > src/version.txt
 
 # Build the dist dir containing the static files
-RUN ["npm", "run", "build"]
+RUN ["npm", "run", "build:traefik"]
 
 FROM node:14.18.2-alpine3.12@sha256:60ebf5d469a72fe510cb197c4a251a92de87f01361d2d8589268b1c641a061ac
 
 # Install tooling
-RUN apk add openssl curl ca-certificates
+RUN apk add openssl curl ca-certificates jq
 
 # Install nginx repo
 RUN printf "%s%s%s\n" "http://nginx.org/packages/alpine/v" `egrep -o '^[0-9]+\.[0-9]+' /etc/alpine-release` "/main" | tee -a /etc/apk/repositories
@@ -51,7 +51,7 @@ RUN ln -sf /dev/stdout /var/log/nginx/access.log && \
     ln -sf /dev/stderr /var/log/nginx/error.log
 
 # Add nginx config
-ADD nginx.conf /etc/nginx/nginx.conf
+ADD nginx-docker-local.conf /etc/nginx/nginx.conf
 
 WORKDIR /app
 
