--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ng serve --port 9700 --proxy-config proxy.conf.json",
     "start-dev": "ng serve --port 9700 --proxy-config proxy-dev.conf.json --ssl true",
     "build": "ng build --configuration production",
+    "build:traefik": "ng build --configuration production --base-href /comments-app/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -24,7 +25,7 @@
     "@angular/platform-browser-dynamic": "^12.2.16",
     "@angular/router": "^12.2.16",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@mju-psi/yti-common-ui": "0.0.3",
+    "@mju-psi/yti-common-ui": "^0.0.3",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "^3.0.1",
