yti-common-ui dependency from tarball

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@angular/platform-browser-dynamic": "^12.2.16",
     "@angular/router": "^12.2.16",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@mju-psi/yti-common-ui": "^0.0.3",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "^3.0.1",
@@ -46,6 +45,7 @@
     "sonarqube-scanner": "^2.5.0",
     "tslib": "^2.0.0",
     "uuid": "3.0.1",
+    "yti-common-ui": "file:../yti-common-ui/dist/yti-common-ui-0.0.3.tgz",
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
